# minifacelib

./: .gitignore  README.md  pyproject.toml
demo/: __init__.py  index.html  webapp.py
eval/: eval_emotions.py  eval_gender_age.py
reports/eval/fer2013/cnn/test/: metrics.json
reports/eval/fer2013/openai/test/: metrics.json
reports/eval/utkface/cnn/test/: metrics.json
reports/eval/utkface/openai/test/: metrics.json
reports/fer2013/: history.csv  result.txt
reports/utkface/: history.csv
src/minifacelib/: __init__.py
src/minifacelib/models/: factory.py
src/minifacelib/models/base/: facepredictor.py  types.py
src/minifacelib/models/cnn/: emotion_model.py  gender_age_model.py  predictor.py
src/minifacelib/models/openai/: __init__.py  predictor.py  prompts.py
tests/: conftest.py  test_cnn_predictor.py  test_demo_webapp.py  test_eval_emotions.py  test_eval_gender_age.py  test_factory.py  test_fer_dataset.py  test_fetch_datasets.py  test_openai_predictor.py  test_train_fer.py  test_train_utkface.py  test_types.py  test_utkface_dataset.py
training/: fer_dataset.py  fetch_datasets.py  train_fer.py  train_utkface.py  utkface_dataset.py
